# space_invaders_ecs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: collated_src.txt
assets/fonts/space_invaders/: license.txt  readme.txt
src/: alien.rs  assets.rs  audio.rs  collate_src.rs  components.rs  custom_window_plugin.rs  debug.rs  explosion.rs  game.rs  main.rs  player.rs  projectile.rs  random.rs  resolution.rs  score.rs  shields.rs  title.rs
