[package]
name = "space_invaders_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = [
    "png",
    "bevy_sprite",
    "bevy_audio",
    "dynamic_linking",
] }


rand_core = "0.9"
bevy_rand = { version = "0.11", features = ["rand_chacha", "wyrand"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
